# hangmantrivia

./: .coveragerc  .gitignore  README.md  hangman_trivia.py  package-lock.json  package.json  pyproject.toml  requirements.txt  word_bank_drunk.py  word_bank_hard.py  word_bank_normal.py
.github/workflows/: backend_tests.yml  frontend_tests.yml
backend/db_management/: write_dynamodb_table.py
backend/lambda_function/: lambda_function.py
frontend/: hangmantrivia.html
frontend/hangmantrivia/scripts/: hangmantrivia.js
frontend/index/scripts/: device_detection.js
src/backend/db_management/: word_bank_normal.py  write_dynamodb_table.py
src/frontend/: hangmantrivia.html
src/frontend/hangmantrivia/scripts/: hangmantrivia.js
src/frontend/hangmantrivia/styles/: style.css
src/frontend/index/scripts/: device_detection.js  load_animations.js
tests/backend/: test_lambda_function.py  test_write_dynamodb_table.py
tests/frontend/: device_detection.test.js  hangmantrivia.test.js  load_animations.test.js
